--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,3 +2,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  select {
+    @apply bg-gray-50 outline outline-main text-black rounded-lg focus-visible:ring-main block w-1/5 mx-auto my-4 p-2.5 font-bold;
+  }
+}
