--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -109,7 +109,8 @@ li.special-gold::before {
   color: var(--gold);
 }
 .youtube {
-  width: 100%;
+  margin: 0 auto;
+  max-width: 1000px;
   aspect-ratio: 16 / 9;
 }
 .youtube iframe {
